--- a/modulos/dashboard.html
+++ b/modulos/dashboard.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ARQ | Almacén</title>
+  <title>Casa Concepto Muebles Perú</title>
   <link rel="stylesheet" href="../estilos/base.css">
 </head>
 <body>
   <header class="topbar">
-    <div class="brand">ARQ Almacén</div>
+    <div class="brand">Casa Concepto Muebles Perú</div>
 
     <nav class="tabs">
         <button data-tab="inventario" class="active">Inventario</button>
