--- a/modulos/login.html
+++ b/modulos/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Login | ARQ</title>
+  <title>Login | Casa Concepto Muebles Perú</title>
   <link rel="stylesheet" href="../estilos/login.css">
 </head>
 <body>
